// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerListItem /> renders details without exploding 1`] = `
<div
  className="EmployerListItem__Container EmployerListItem__Container--Detailed"
>
  <div
    className="EmployerListItem__Title"
  >
    <h2>
      <a
        onClick={[Function]}
        title=""
      >
        
      </a>
    </h2>
    <span
      className="EmployerRatingPill__Box EmployerRatingPill__Box--fair "
      title="Tλè ϱèñèřáℓ řáƭïñϱ ôƒ ƭλè è₥ƥℓô¥èř."
    >
      Fáïř
      <i
        className="material-icons"
      >
        trending_flat
      </i>
    </span>
  </div>
  <div
    className="EmployerListItem__Subtitle"
  >
    <span
      className="EmployerListItem__AggregateRatings"
      title="Âϱϱřèϱáƭè çôúñƭƨ ôƒ ƭλè ϱôôδ áñδ βáδ áçƭïôñƨ áñ è₥ƥℓô¥èř λáƨ ƭáƙèñ."
    >
      <span
        className="EmployerListItem__GoodRatings"
      >
        <i
          className="material-icons"
        >
          add
        </i>
        0
      </span>
      <span
        className="EmployerListItem__PoorRatings"
      >
        <i
          className="material-icons"
        >
          remove
        </i>
        0
      </span>
    </span>
  </div>
  <div
    className="EmployerListItem__Summary"
    onClick={[Function]}
  >
    <div
      className="EmployerListItem__OverflowScreen"
    />
  </div>
  <div
    className="EmployerListItem__Actions"
  >
    [component: EmployerActionLinks employer=([object Object]) /]
    <a
      className="EmployerListItem__ReadMore"
      onClick={[Function]}
    >
      Rèáδ ₥ôřè
      <i
        className="material-icons"
      >
        fullscreen
      </i>
    </a>
  </div>
</div>
`;

exports[`<EmployerListItem /> renders standard without exploding 1`] = `
<div
  className="EmployerListItem__Container EmployerListItem__Container--Simple EmployerListItem__Rating--fair"
  onClick={[Function]}
>
  <span
    className="EmployerListItem__Name"
  >
    
  </span>
  <span
    className="EmployerRatingPill__Box EmployerRatingPill__Box--fair EmployerRatingPill__Box--LowContrast"
    title="Tλè ϱèñèřáℓ řáƭïñϱ ôƒ ƭλè è₥ƥℓô¥èř."
  >
    Fáïř
    <i
      className="material-icons"
    >
      trending_flat
    </i>
  </span>
</div>
`;
